# illama

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: architecture.md  model-compatibility.md  quantization.md  troubleshooting.md
examples/: metrics.md
illama_cli/: __init__.py  __main__.py  cli.py  client.py
illama_manager/: __init__.py  __main__.py  config.py  model_loader.py  registry.py  server.py
scripts/: illama_sync_from_metrics.py  install.sh
