[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "illama"
version = "0.2.0"
description = "Ollama-like LLM stack for Intel Arc GPUs using OpenVINO"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "illama contributors"}
]
keywords = [
    "llm",
    "intel",
    "arc",
    "openvino",
    "ollama",
    "genai",
    "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "openvino==2025.4.1",
    "openvino-genai==2025.4.1.0",
    "optimum-intel>=1.16.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
illama = "illama_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/mkhomutskyi/illama"
Documentation = "https://github.com/mkhomutskyi/illama#readme"
Repository = "https://github.com/mkhomutskyi/illama"
Issues = "https://github.com/mkhomutskyi/illama/issues"
Changelog = "https://github.com/mkhomutskyi/illama/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["illama_manager*", "illama_cli*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
